--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Daniel\\AppData\\Roaming\\NetBeans\\7.2.1\\build.properties
+user.properties.file=C:\\Users\\OSVALDO\\.netbeans\\7.1.1\\build.properties
