Conjuntos sin añadir a DB

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -4,6 +4,8 @@ annotation.processing.processor.options=-Aeclipselink.canonicalmodel.use_static_
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=Pantallas de BD
+application.vendor=OSVALDO
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -24,15 +26,14 @@ debug.test.classpath=\
 dist.dir=dist
 dist.jar=${dist.dir}/Pantallas_de_BD.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
-file.reference.mysql-connector-java-5.1.26-bin.jar=C:\\Users\\Daniel\\Documents\\NetBeansProjects\\mysql-connector-java-5.1.26\\mysql-connector-java-5.1.26\\mysql-connector-java-5.1.26-bin.jar
 file.reference.mysql-connector-java-5.1.26-bin.jar-1=lib\\mysql-connector-java-5.1.26-bin.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.beans-binding.classpath}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mysql-connector-java-5.1.26-bin.jar}:\
     ${libs.eclipselink.classpath}:\
     ${file.reference.mysql-connector-java-5.1.26-bin.jar-1}
 # Space-separated list of extra javac options
